--- a/front/index.html
+++ b/front/index.html
@@ -17,8 +17,8 @@
       <nav class="font-italic">
         <ul>
           <li><button id="inicio-Btn"><a href="#">Inicio</a></button></li>
-          <li><button id="explore-movies"><a href="/PM2-banrostin1312/front/pages/exploreMovies.html">Explore Movies</a></button></li>
-          <li><a href="/PM2-banrostin1312/front/pages/createMovie.html">Add Movie</a></li>
+          <li><button id="explore-movies"><a href="pages/exploreMovies.html">Explore Movies</a></button></li>
+          <li><a href="pages/createMovie.html">Add Movie</a></li>
         </ul>
       </nav>
     </header>
