--- a/front/pages/exploreMovies.html
+++ b/front/pages/exploreMovies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="/PM2-banrostin1312/front/styles/exploreMovies.css">
+    <link rel="stylesheet" href="../styles/exploreMovies.css">
     <title>Explore Movies</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
         <h1>Explore Movies</h1>
     </div>
     <div id="movie-container" class="container"></div>
-        <script src="/PM2-banrostin1312/front/scripts/explore2.js" type="module"></script>
+        <script src="../scripts/explore2.js" type="module"></script>
         <button class="scrollUpBtn" >↑</button>
         
 </body>
