--- a/front/pages/exploreMovies.html
+++ b/front/pages/exploreMovies.html
@@ -14,7 +14,7 @@
     </div>
     <button id="inicio-Btn">Inicio</button>
     <div class="recommended">
-        <h1>Explore Movies</h1>
+        <h1>Explore Moviess</h1>
     </div>
     <div id="movie-container" class="container"></div>
         <script src="../scripts/explore2.js" type="module"></script>
