Acomodo de index.html para el deply en vercel

--- a/front/pages/createMovie.html
+++ b/front/pages/createMovie.html
@@ -12,7 +12,7 @@
 <body>
 
         <section id="load-Movie-Form">
-           <a href="../index.html"> <button id="back">Back</button></a>
+           <a href="/index.html"> <button id="back">Back</button></a>
             <form id="movieForm" >
                 <h4>Add Movie Data</h4>
                 <label for="title">Title:</label>
