--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="styles/reset.css">
+   <link rel="stylesheet" href="./front/styles/reset.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-   <link rel="stylesheet" href="styles/styles.css">
+   <link rel="stylesheet" href="./front/styles/styles.css">
    
 
     <title>M2 Henry Project</title>
   </head>
   <body>
     <header class="header">
-      <img src="assets/Diseño_sin_título__10_-removebg-preview.png" alt="Nombre del Logo">
+      <img src="./front/assets/Diseño_sin_título__10_-removebg-preview.png" alt="Nombre del Logo">
       <nav class="font-italic">
         <ul>
           <li><button id="inicio-Btn"><a href="#">Inicio</a></button></li>
-          <li><button id="explore-movies"><a href="pages/exploreMovies.html">Explore Movies</a></button></li>
+          <li><button id="explore-movies"><a href="./front/pages/exploreMovies.html">Explore Movies</a></button></li>
           <li><a href="pages/createMovie.html">Add Movie</a></li>
         </ul>
       </nav>
@@ -70,5 +70,5 @@
 
 
   </body>
-  <footer><img src="/PM2-banrostin1312/front/assets/camara-de-cine.png" alt=""></footer>
+  <footer><img src="./front/assets/camara-de-cine.png" alt=""></footer>
 </html>
