--- a/front/pages/exploreMovies.html
+++ b/front/pages/exploreMovies.html
@@ -12,7 +12,7 @@
         <input type="text" id="searchInput" placeholder="Search movie">
         <button id="searchBtn">Search</button>
     </div>
-    <button id="inicio-Btn">Inicio</button>
+    <a href="/index.html"><button id="inicio-Btn">Inicio</button></a>
     <div class="recommended">
         <h1>Explore Moviess</h1>
     </div>
