--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
           <li><button id="inicio-Btn"><a href="#">Inicio</a></button></li>
           <li><button id="explore-movies"><a href="./front/pages/exploreMovies.html">Explore Movies</a></button></li>
-          <li><a href="pages/createMovie.html">Add Movie</a></li>
+          <li><a href="./front/pages/createMovie.html">Add Movie</a></li>
         </ul>
       </nav>
     </header>
